# contests

./: .gitignore  check_branches.sh  clean_branches.sh
general/: CMakeLists.txt  data1B.txt  data1C.txt  data1D.txt  run.sh  test.cpp  testA.cpp  testB.cpp  testC.cpp  testD.cpp
leetcode/: CMakeLists.txt  save.cpp  test.cpp
save/: BitSet.cpp  CMakeLists.txt  Galois.cpp  KMP.cpp  RollingHash.cpp
