CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(save)

SET(DEFAULT_BUILD_TYPE "Debug")
IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "${DEFAULT_BUILD_TYPE}" CACHE STRING "Choose the type of build." FORCE)
ENDIF()
SET(EXPECTED_BUILD_TYPES Debug Release RelWithDebInfo MinSizeRel)
IF("${CMAKE_BUILD_TYPE}" IN_LIST EXPECTED_BUILD_TYPES)
    MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
ELSE()
    MESSAGE(WARNING "Unexcpected build type: ${CMAKE_BUILD_TYPE}")
ENDIF()

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Werror")
SET(CMAKE_C_FLAGS "-Wall -Wextra -Wpedantic -Werror")

ENABLE_TESTING()

ADD_EXECUTABLE(RollingHash.test RollingHash.cpp)
ADD_TEST(NAME RollingHash.test COMMAND RollingHash.test)

ADD_EXECUTABLE(Galois.test Galois.cpp)
ADD_TEST(NAME Galois.test COMMAND Galois.test)

ADD_EXECUTABLE(BitSet.test BitSet.cpp)
ADD_TEST(NAME BitSet.test COMMAND BitSet.test)

ADD_EXECUTABLE(KMP.test KMP.cpp)
ADD_TEST(NAME KMP.test COMMAND KMP.test)
